--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -5,23 +5,25 @@
 #
 ###############################################################################
 
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
-
+# Package metadata.
+#==============================================================================
 Name: libbitcoin
 Description: Bitcoin Cross-Platform C++ Development Toolkit
 URL: https://github.com/libbitcoin/libbitcoin
 Version: @PACKAGE_VERSION@
 
-# Our dependencies that publish package configuration.
+
+# Package variables.
+#==============================================================================
+# Dependencies that publish package configuration.
+#------------------------------------------------------------------------------
 Requires: libsecp256k1 >= 0.0.1
-Requires.private: 
 
-# Our own include directory and any other compiler flags we require.
-Cflags: -I${includedir} @testnet@ @boost_CPPFLAGS@ @iconv_CPPFLAGS@ @pthread_CPPFLAGS@
+# Include directory and any other required compiler flags.
+#------------------------------------------------------------------------------
+Cflags: -I@includedir@ @testnet@ @boost_CPPFLAGS@ @iconv_CPPFLAGS@ @pthread_CPPFLAGS@
 
-# Our own lib directory, lib and any that do not publish package configuration.
-Libs: -L${libdir} -lbitcoin @boost_LDFLAGS@ @boost_chrono_LIBS@ @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @iconv_LIBS@ @pthread_LIBS@ @rt_LIBS@
-Libs.private: 
+# Lib directory, lib and any required that do not publish pkg-config.
+#------------------------------------------------------------------------------
+Libs: -L@libdir@ -lbitcoin @boost_LDFLAGS@ @boost_chrono_LIBS@ @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @iconv_LIBS@ @pthread_LIBS@ @rt_LIBS@
+
